# Fabulae

./: .gitignore  CMakeLists.txt  README.md
Include/: resources.h
src/: decode.cpp  main.cpp  resources.cpp
